@@ -13,9 +13,14 @@ CREATE TABLE fe_users (
 	first_name varchar(50) DEFAULT '' NOT NULL,
 	last_name varchar(50) DEFAULT '' NOT NULL,
 	status int(11) unsigned DEFAULT '0' NOT NULL,
+	city varchar(40) DEFAULT '' NOT NULL,
 	country varchar(60) DEFAULT '' NOT NULL,
 	house_no varchar(20) DEFAULT '' NOT NULL,
 	zip varchar(20) DEFAULT '' NOT NULL,
+	telephone varchar(25) DEFAULT '' NOT NULL,
+	fax varchar(25) DEFAULT '' NOT NULL,
+	email varchar(255) DEFAULT '' NOT NULL,
+	company varchar(50) DEFAULT '' NOT NULL,
 	date_of_birth int(11) DEFAULT '0' NOT NULL,
 	comments text NOT NULL,
 	by_invitation tinyint(4) unsigned DEFAULT '0' NOT NULL,
